Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Alpha
-
None
-
osx 10.11
-
-
7d2c87311e682eabc9b7a3b1e1b4e2f21d0623bf
Description
FAIL! : tst_QUuid::processUniqueness() 'process.waitForFinished()' returned FALSE. ()
Attachments
Issue Links
- is required for
-
QTBUG-49842 Meta bug for macOS 10.11
-
- Closed
-
For Gerrit Dashboard: QTBUG-49837 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
143342,3 | QProcessPrivate::startProcess - fix invalid encodedProgramName (OS X) | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |